OSGi Services API

--- a/aem-guides-wknd/ui.apps/src/main/content/jcr_root/apps/wknd/components/byline-copy/byline-copy.html
+++ b/aem-guides-wknd/ui.apps/src/main/content/jcr_root/apps/wknd/components/byline-copy/byline-copy.html
@@ -5,6 +5,11 @@
     <h2 class="cmp-byline-copy__escuela">${bylineCopy.escuela}</h2>
     <p class="cmp-byline-copy__hobbies">${bylineCopy.hobbies @ join=', '}</p>
     <p class="cmp-byline-copy__pageName">El Nombre de la Página es: ${bylineCopy.pageName}</p>
+
+    <div data-sly-list.item="${bylineCopy.pages}" >
+        <p> Pagina: ${item.title}</p>
+    </div>
+
 </div>
 
 <sly data-sly-call="${placeholderTemplate.placeholder @ isEmpty=!hasContent}"></sly>
