--- a/aem-guides-wknd/ui.frontend/src/main/webpack/components/_text.scss
+++ b/aem-guides-wknd/ui.frontend/src/main/webpack/components/_text.scss
@@ -4,6 +4,7 @@
 /* WKND Text Quote style */
 .cmp-text--quote {
     .cmp-text {
+        color: $black;
         background-color: $brand-third;
         margin: 1em 0em;
         padding: 1em;
