--- a/aem-guides-wknd/ui.frontend/src/main/webpack/site/_variables.scss
+++ b/aem-guides-wknd/ui.frontend/src/main/webpack/site/_variables.scss
@@ -10,7 +10,7 @@ $blue:                   #0045FF;
 $pink:                   #FF0058;
 
 //== Brand Colors
-$brand-primary:          $pink;
+$brand-primary:          $blue;
 $brand-secondary:        $black;
 $brand-third:            $gray-light;
 
