--- a/aem-guides-wknd/ui.frontend/src/main/webpack/components/_byline.scss
+++ b/aem-guides-wknd/ui.frontend/src/main/webpack/components/_byline.scss
@@ -26,6 +26,6 @@
         margin-left: $imageSize + 25px;
         color: $gray;
         font-size: $font-size-xsmall;
-        text-transform: uppercase;
+        text-transform: lowercase;
     }
 }
