--- a/aem-guides-wknd/ui.frontend/src/main/webpack/site/_variables.scss
+++ b/aem-guides-wknd/ui.frontend/src/main/webpack/site/_variables.scss
@@ -10,8 +10,8 @@ $blue:                   #0045FF;
 $pink:                   #FF0058;
 
 //== Brand Colors
-$brand-primary:          $blue;
-$brand-secondary:        $black;
+$brand-primary:          $black;
+$brand-secondary:        $white;
 $brand-third:            $gray-light;
 
 //== Element Colors
@@ -20,7 +20,7 @@ $body-bg:                 $white;
 $text-color:              $black;
 $text-color-inverse:      $gray-light;
 $link-color:              $blue;
-$nav-link-color:          $black;
+$nav-link-color:          $white;
 $nav-link-color-inverse:  $gray-light;
 
 //== Font
